--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           terraform_version: 1.5.0
 
+      - name: Terraform destroy
+        run: terraform -chdir=terraform destroy -auto-approve
+      
       - name: Terraform Init
         run: terraform -chdir=terraform init
 
