--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           mkdir -p ~/.ssh
           echo "${{ secrets.AWS_SSH_PRIVATE_KEY }}" > ~/.ssh/aws-key.pem
-          chmod 600 ~/.ssh/aws-key.pem
+          chmod 400 ~/.ssh/aws-key.pem
 
       - name: Instala Ansible
         run: |
@@ -51,4 +51,4 @@ jobs:
       #     echo "$INSTANCE_IP ansible_user=ubuntu ansible_ssh_private_key_file=~/.ssh/aws-key.pem ansible_ssh_common_args='-o StrictHostKeyChecking=no'" >> inventory.ini
 
       - name: Executa playbook Ansible
-        run: ansible-playbook -i ansiblev2/inventory.ini ansiblev2/playbook.yml
+        run: export ANSIBLE_HOST_KEY_CHECKING=False && ansible-playbook -i ansiblev2/inventory.ini ansiblev2/playbook.yml
