Agora OK , vamos testar o final parte 2

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
           sudo apt install -y ansible
 
       - name: Executa playbook Ansible
-        run: export ANSIBLE_HOST_KEY_CHECKING=False && ansible-playbook -i ansible/inventory.ini ansiblev2/playbook.yml
+        run: export ANSIBLE_HOST_KEY_CHECKING=False && ansible-playbook -i ansible/inventory.ini ansible/playbook.yml
